# NetSim

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  build.sh  buildenv.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: docker-build.yml  python-test.yml
dev/: Dockerfile  buildenv.sh  requirements.txt
examples/: base.ipynb  network_of_switches.ipynb  wf_ee509_1.ipynb  wf_ee509_1.yaml  wf_ee509_1_2.yaml  wf_ee509_1_2_1.yaml
netsim/: __init__.py  analysers.py  cli.py  common.py  core.py  dict_path.py  exceptions.py  instructions.py  netsim.py  netsim_analysis.py  netsim_base.py  netsim_common.py  netsim_simulator.py  netsim_stat.py  netsim_switch.py  plot.py  resources.py  sim_common.py  simcore.py  simstat.py  stat.py  stat_base.py  tracer.py  utils.py  wf_instructions.py  workflow.py
netsim/applications/packet_network/: analysis.py  base.py  common.py  graph.py  simulator.py  stat.py  switch.py
netsim/des/: core.py  stat.py
netsim/graphlib/: io.py
netsim/graphlib/algorithms/: spf.py
netsim/netalgo/: spf.py
netsim/netbuilder/: analysers.py  builder_instructions.py  filter.py  instructions.py  wf_instructions.py  workflow.py
netsim/netgraph/: graph.py  io.py
netsim/simulator/: netsim_analysis.py  netsim_base.py  netsim_simulator.py  netsim_stat.py  netsim_switch.py  simcore.py  simstat.py
netsim/simulator/core/: simcore.py  simstat.py  simtracer.py
netsim/workflow/: analysers.py  instructions.py  wf_instructions.py  workflow.py
tests/: common.py  test_advanced_scenarios.py  test_condition.py  test_container.py  test_dict_path.py  test_ee509.py  test_environment.py  test_event.py  test_filter_store.py  test_integration.py  test_interrupt.py  test_netgraph_graph.py  test_netsim.py  test_netsim_base.py  test_netsim_stat.py  test_netsim_switch.py  test_priority_resource.py  test_priority_store.py  test_process.py  test_resource.py  test_resources.py  test_scenarios.py  test_simcore.py  test_simstat.py  test_simtracer.py  test_simulator.py  test_sorted_queue.py  test_stat.py  test_stat_base.py  test_store.py  test_timeout.py  test_tracer.py  test_utils.py  test_wf_instruction.py  test_workflow.py
tests/applications/packet_network/: test_ee509.py  test_netsim.py  test_netsim_base.py  test_netsim_sim.py  test_netsim_stat.py  test_netsim_switch.py
tests/applications/packet_network/test_data/: ee509_data.py  netsim_data.py
tests/des/: test_core.py  test_stat.py  test_tracer.py
tests/graphlib/: test_graph.py  test_io.py
tests/graphlib/algorithms/: test_spf.py  test_spf_bench.py
tests/netalgo/: test_spf.py  test_spf_bench.py
tests/netbuilder/: test_builder_instructions.py  test_dict_path.py  test_wf_instruction.py  test_workflow.py
tests/netgraph/: test_io.py
tests/simulator/: test_ee509.py  test_netsim.py  test_netsim_base.py  test_netsim_stat.py  test_netsim_switch.py  test_simcore.py  test_simstat.py  test_simtracer.py
tests/test_data/: 2tierClos.yaml  2tierClos_2graphs.yaml  3tierClos.yaml  3tierClos_2graphs.yaml  Backbone.yaml  ee509_data.py  ee509_wf.yaml  ee509_wf2.yaml  netsim_data.py  test_wf.yaml  test_wf_2.yaml
tests/workflow/: test_dict_path.py  test_wf_instruction.py  test_workflow.py
