[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netsim"
version = "0.3.0"
description = "A discrete event simulator toolkit adapted for network simulation use-cases."
readme = "README.md"
authors = [{ name = "Andrey Golovanov" }]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "ngraph",
    "pyyaml",
    "schema",
    "jq",
    "scipy",
    "pandas",
    "seaborn",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "pytest-benchmark",
    "pytest-mock",
    "black",
    "isort",
]

[tool.pytest.ini_options]
addopts = "--cov=netsim --cov-fail-under=85 --cov-report term-missing"
